--- a/config.ini
+++ b/config.ini
@@ -1,9 +1,12 @@
 [DEFAULT]
 # Delay between messages in minutes:
-delay = 1
+delay = 15
 
 server = irc.sff.net
 port = 6667
 channel = #test123123
 nick = YuleListBot
 name = YuleListBot
+
+# one of: DEBUG, INFO, WARNING, ERROR, CRITICAL
+loglevel = INFO
